derive/tests/snapshots/on_soft_delete_cascade_with_soft_delete_hooks/Book/soft_delete_book_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to soft-delete a `Book` row in the `book` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn soft_delete_book_by_id<'a>(
        &'a self,
        id: impl Into<BookId> + Clone,
    ) -> Result<
        crate::spacetimedsl::delete::DeletionResult,
        crate::spacetimedsl::error::SpacetimeDSLError,
    > {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use crate::spacetimedsl::itertools::Itertools;
        let id = id.clone().into().value();
        let row_to_delete = self.db().book().id().find(id);
        let row_to_delete = match row_to_delete {
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "book".into(),
                    column_names_and_row_values: format!("{{ id : {} }}", & id).into(),
                });
            }
            Some(row_to_delete) => row_to_delete,
        };
        if row_to_delete.deleted {
            return Ok(crate::spacetimedsl::delete::DeletionResult {
                table_name: "book".into(),
                one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                entries: vec![],
                error_from_hook: None,
            });
        }
        let mut deletion_result_entry = crate::spacetimedsl::delete::DeletionResultEntry {
            table_name: "book".into(),
            column_name: "id".into(),
            strategy: crate::spacetimedsl::delete::OnDeleteStrategy::SoftDelete,
            row_value: format!("{}", BookId::new(row_to_delete.id.clone())).into(),
            child_entries: vec![],
        };
        let old_row = &row_to_delete;
        let new_row = old_row.clone();
        use self::BeforeBookSoftDeleteHook;
        let new_row = crate::spacetimedsl::DSLMethodHooks::before_book_soft_delete(
            self,
            old_row,
            new_row,
        )?;
        let mut new_row = new_row;
        new_row.deleted = true;
        let new_row = self.db().book().id().update(new_row);
        use self::AfterBookSoftDeleteHook;
        crate::spacetimedsl::DSLMethodHooks::after_book_soft_delete(
            self,
            old_row,
            &new_row,
        )?;
        return Ok(crate::spacetimedsl::delete::DeletionResult {
            table_name: "book".into(),
            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
            entries: vec![deletion_result_entry],
            error_from_hook: None,
        });
    }
}
