derive/tests/snapshots/on_soft_delete_cascade_with_soft_delete_hooks/Book/soft_delete_books_by_author_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Try to soft-delete all `Book` rows in the `book` table whose value matches the value from the single-column btree index on the `author_id` column.
    pub fn soft_delete_books_by_author_id<'a>(
        &'a self,
        author_id: impl Into<AuthorId>,
    ) -> Result<
        crate::spacetimedsl::delete::DeletionResult,
        crate::spacetimedsl::error::SpacetimeDSLError,
    > {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use crate::spacetimedsl::itertools::Itertools;
        let author_id = author_id.into().value();
        let rows_to_delete: Vec<Book> = self
            .db()
            .book()
            .author_id()
            .filter(author_id)
            .filter(|row| !(row.deleted))
            .collect();
        if rows_to_delete.is_empty() {
            return Ok(crate::spacetimedsl::delete::DeletionResult {
                table_name: "book".into(),
                one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::Multiple,
                entries: vec![],
                error_from_hook: None,
            });
        }
        let mut deletion_result_entries = std::collections::HashMap::new();
        for row_to_delete in &rows_to_delete {
            deletion_result_entries
                .insert(
                    &row_to_delete.id,
                    crate::spacetimedsl::delete::DeletionResultEntry {
                        table_name: "book".into(),
                        column_name: "id".into(),
                        strategy: crate::spacetimedsl::delete::OnDeleteStrategy::SoftDelete,
                        row_value: format!("{}", BookId::new(row_to_delete.id.clone()))
                            .into(),
                        child_entries: vec![],
                    },
                );
        }
        for old_row in &rows_to_delete {
            let new_row = old_row.clone();
            use self::BeforeBookSoftDeleteHook;
            let new_row = crate::spacetimedsl::DSLMethodHooks::before_book_soft_delete(
                self,
                old_row,
                new_row,
            )?;
            let mut new_row = new_row;
            new_row.deleted = true;
            let new_row = self.db().book().id().update(new_row);
            use self::AfterBookSoftDeleteHook;
            crate::spacetimedsl::DSLMethodHooks::after_book_soft_delete(
                self,
                old_row,
                &new_row,
            )?;
        }
        return Ok(crate::spacetimedsl::delete::DeletionResult {
            table_name: "book".into(),
            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::Multiple,
            entries: deletion_result_entries.into_values().collect_vec(),
            error_from_hook: None,
        });
    }
}
